# hexlet-django-blog

./: .env  db.sqlite3  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/articles/: index.html
hexlet_django_blog/articles/: admin.py  apps.py  forms.py  urls.py  views.py
hexlet_django_blog/articles/migrations/: 0001_initial.py
hexlet_django_blog/templates/: about.html  base.html  index.html
hexlet_django_blog/templates/articles/: article_details.html  create.html  details.html  index.html  update.html
